--- a/Cover Files/styles.css
+++ b/Cover Files/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: #f0f0f0;
     color: #333;
 }
@@ -23,7 +23,17 @@ nav li {
 }
 
 #landing{
-    padding: 20 px;
+    padding: 20px;
+}
+
+#landing img{
+    margin-right: 50px;
+    margin-bottom: 50px;
+}
+
+#landing h1,
+#landing p{
+    text-align: center;
 }
 
 #projects{
@@ -31,4 +41,23 @@ nav li {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+}
+
+.content{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    gap: 20px;
+}
+
+.text{
+    padding: 20px;
+}
+
+h1{
+    font-size: 30px;
+}
+
+p{
+    font-size: 24px;
 }
