Se establecen las clases para los botones github y go-home en el archivo html y los estilos para estos botones en el styles.css

--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,54 @@ h1{
 p{
     font-size: 24px;
 }
+
+/* Estilos para la tabla */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px; /* Margen superior para separar la tabla del resto del contenido */
+}
+
+/*Estilos para las celdas de encabezados*/
+th {
+    width: 33.33%;
+    text-align: center;
+    padding: 8px;
+    border: 1px solid #ddd; /*bordes de un 1 pixel sólido con color gris claro*/
+}
+
+/* Estilos para las celdas de datos */
+td {
+    width: 33.33%;
+    border: 1px solid #ddd; /* Bordes de 1 píxel sólido con color gris claro */
+    padding: 8px;
+    text-align: left;
+}
+
+/* Estilos para las filas impares (cambia el color de fondo) */
+tr:nth-child(odd) {
+    background-color: #f2f2f2; /* Fondo gris claro para filas impares */
+}
+
+/* Estilos para el botón de GitHub */
+.d-grid-gap-2 {
+    gap: 2;
+}
+
+.col-6-mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn-github, .btn-go-home {
+    
+    
+    background-color: #6c757d; /* color de fondo gris oscuro  */
+    color: #ffffff; /* Texto blanco  */
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 2.5;
+    text-decoration: none;
+    
+}
