--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px; /* Margen superior para separar la tabla del resto del contenido */
+    border: 1px solid #ddd;
 }
 
 /*Estilos para las celdas de encabezados*/
@@ -74,15 +75,15 @@ th {
     width: 33.33%;
     text-align: center;
     padding: 8px;
-    border: 1px solid #ddd; /*bordes de un 1 pixel sólido con color gris claro*/
+    border: 1px solid #8d99a2; /*bordes de un 1 pixel sólido con color gris claro*/
 }
 
 /* Estilos para las celdas de datos */
 td {
     width: 33.33%;
-    border: 1px solid #ddd; /* Bordes de 1 píxel sólido con color gris claro */
+    text-align: center;
     padding: 8px;
-    text-align: left;
+    border: 1px solid #8d99a2;
 }
 
 /* Estilos para las filas impares (cambia el color de fondo) */
@@ -92,12 +93,11 @@ tr:nth-child(odd) {
 
 /* Estilos para el botón de GitHub */
 .d-grid-gap-2 {
-    gap: 2;
+    gap: 2px;
 }
 
-.col-6-mx-auto {
-    margin-left: auto;
-    margin-right: auto;
+.col-6 mx-auto {
+    margin: 0 auto;
 }
 
 .btn-github, .btn-go-home {
@@ -116,4 +116,14 @@ tr:nth-child(odd) {
 td img {
     width: 100%;
     height: auto;
+}
+
+table, th, td {
+    border: 1px solid #ddd;
+
+}
+
+th {
+    
+    text-align: center;
 }
